crates/ir/tests/snapshots/lower_test__ownership__own_valid_match_arms.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__own_valid_match_arms

type Color = Red#0 | Green#1 | Blue#2
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]

fn consume(v0: ~String) -> String =
  v0

fn test(v1: Color) -> String =
  let_join v4(v2: ~String) =
    let v3: String = call consume(v2)
    v3
  in
  switch v1 {
    0 ->
      jump v4("red")
    1 ->
      jump v4("green")
    2 ->
      jump v4("blue")
  }
