crates/ir/tests/snapshots/lower_test__ownership__peek_stdlib_match.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__peek_stdlib_match

type Choice = A#0 | B#1
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare peek: (h) -> h

fn classify(v0: String) -> Choice =
  let v1: ~Choice = construct Choice::A#0()
  v1

fn test(v2: ~String) -> String =
  let_join v6(v5: ~Int) =
    v2
  in
  let v3: String = call peek(v2)
  let v4: Choice = call classify(v3)
  switch v4 {
    0 ->
      jump v6(0)
    1 ->
      jump v6(0)
  }
